templates_lec10-ignore/sample2/sample2-ec2.yml
AWSTemplateFormatVersion: 2010-09-09

# raisetech第10回課題として、VPC作成からunicornとNginxを使ったアプリケーション起動まで
Description: Create EC2

Parameters:
  EnvironmentName:
    Description: Please type the EnvironmentName.
    Type: String
    Default: test10

  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the InstanceType
    Type: "AWS::EC2::KeyPair::KeyName"

  MyIP:
    Description: IP address allowed to access EC2
    Type: String


Resources:
  # ==========================================================================
  # EC2作成
  # ==========================================================================

  # EC2インスタンス作成
  EC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d889f77081190db1
      AvailabilityZone: ap-northeast-1a
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          DeleteOnTermination: true
          GroupSet:
            - !Ref EC2SecurityGroup
          SubnetId: !ImportValue PublicSubnet01id
      KeyName: !Ref KeyName
      IamInstanceProfile: !ImportValue "test10-S3AccessInstanceProfile"
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ec2

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: test10-ec2-sg-cf
      GroupDescription: Enable SSH and HTTP access only MyIP
      VpcId: !ImportValue
        Fn::Sub: "${EnvironmentName}-vpc"
      SecurityGroupIngress:
        # HTTP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        # ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


Outputs:
  EC2SecurityGroup:
    Value: !GetAtt EC2SecurityGroup.GroupId
    Export:
      Name: !Sub "${EnvironmentName}-ec2-security-group-id"

  EC2:
    Description: Get an EC2 instance
    Value: !Ref EC2
    Export:
      Name: test10-ec2

  EC2InstanceId:
    Description: The ID of EC2 instance
    Value: !Ref EC2
    Export:
      Name: test10-EC2InstanceId
